clients/include/hipsolver_fortran.hpp

/* ==========
 *   LAPACK
 * ========== */

// orgbr/ungbr
HIPSOLVER_EXPORT hipsolverStatus_t hipsolverSorgbr_bufferSizeFortran(hipsolverHandle_t   handle,
                                                                     hipsolverSideMode_t side,
                                                                     int                 m,
                                                                     int                 n,
                                                                     int                 k,
                                                                     float*              A,
                                                                     int                 lda,
                                                                     float*              tau,
                                                                     int*                lwork);
HIPSOLVER_EXPORT hipsolverStatus_t hipsolverDorgbr_bufferSizeFortran(hipsolverHandle_t   handle,
                                                                     hipsolverSideMode_t side,
                                                                     int                 m,
                                                                     int                 n,
                                                                     int                 k,
                                                                     double*             A,
                                                                     int                 lda,
                                                                     double*             tau,
                                                                     int*                lwork);
HIPSOLVER_EXPORT hipsolverStatus_t hipsolverCungbr_bufferSizeFortran(hipsolverHandle_t   handle,
                                                                     hipsolverSideMode_t side,
                                                                     int                 m,
                                                                     int                 n,
                                                                     int                 k,
                                                                     hipFloatComplex*    A,
                                                                     int                 lda,
                                                                     hipFloatComplex*    tau,
                                                                     int*                lwork);
HIPSOLVER_EXPORT hipsolverStatus_t hipsolverZungbr_bufferSizeFortran(hipsolverHandle_t   handle,
                                                                     hipsolverSideMode_t side,
                                                                     int                 m,
                                                                     int                 n,
                                                                     int                 k,
                                                                     hipDoubleComplex*   A,
                                                                     int                 lda,
                                                                     hipDoubleComplex*   tau,
                                                                     int*                lwork);
HIPSOLVER_EXPORT hipsolverStatus_t hipsolverSorgbrFortran(hipsolverHandle_t   handle,
                                                          hipsolverSideMode_t side,
                                                          int                 m,
                                                          int                 n,
                                                          int                 k,
                                                          float*              A,
                                                          int                 lda,
                                                          float*              tau,
                                                          float*              work,
                                                          int                 lwork,
                                                          int*                devInfo);
HIPSOLVER_EXPORT hipsolverStatus_t hipsolverDorgbrFortran(hipsolverHandle_t   handle,
                                                          hipsolverSideMode_t side,
                                                          int                 m,
                                                          int                 n,
                                                          int                 k,
                                                          double*             A,
                                                          int                 lda,
                                                          double*             tau,
                                                          double*             work,
                                                          int                 lwork,
                                                          int*                devInfo);
HIPSOLVER_EXPORT hipsolverStatus_t hipsolverCungbrFortran(hipsolverHandle_t   handle,
                                                          hipsolverSideMode_t side,
                                                          int                 m,
                                                          int                 n,
                                                          int                 k,
                                                          hipFloatComplex*    A,
                                                          int                 lda,
                                                          hipFloatComplex*    tau,
                                                          hipFloatComplex*    work,
                                                          int                 lwork,
                                                          int*                devInfo);
HIPSOLVER_EXPORT hipsolverStatus_t hipsolverZungbrFortran(hipsolverHandle_t   handle,
                                                          hipsolverSideMode_t side,
                                                          int                 m,
                                                          int                 n,
                                                          int                 k,
                                                          hipDoubleComplex*   A,
                                                          int                 lda,
                                                          hipDoubleComplex*   tau,
                                                          hipDoubleComplex*   work,
                                                          int                 lwork,
                                                          int*                devInfo);
// orgqr/ungqr
HIPSOLVER_EXPORT hipsolverStatus_t hipsolverSorgqr_bufferSizeFortran(
    hipsolverHandle_t handle, int m, int n, int k, float* A, int lda, float* tau, int* lwork);
HIPSOLVER_EXPORT hipsolverStatus_t hipsolverDorgqr_bufferSizeFortran(
    hipsolverHandle_t handle, int m, int n, int k, double* A, int lda, double* tau, int* lwork);
HIPSOLVER_EXPORT hipsolverStatus_t hipsolverCungqr_bufferSizeFortran(hipsolverHandle_t handle,
                                                                     int               m,
                                                                     int               n,
                                                                     int               k,
                                                                     hipFloatComplex*  A,
                                                                     int               lda,
                                                                     hipFloatComplex*  tau,
                                                                     int*              lwork);
HIPSOLVER_EXPORT hipsolverStatus_t hipsolverZungqr_bufferSizeFortran(hipsolverHandle_t handle,
                                                                     int               m,
                                                                     int               n,
                                                                     int               k,
                                                                     hipDoubleComplex* A,
                                                                     int               lda,
                                                                     hipDoubleComplex* tau,
                                                                     int*              lwork);
HIPSOLVER_EXPORT hipsolverStatus_t hipsolverSorgqrFortran(hipsolverHandle_t handle,
                                                          int               m,
                                                          int               n,
                                                          int               k,
                                                          float*            A,
                                                          int               lda,
                                                          float*            tau,
                                                          float*            work,
                                                          int               lwork,
                                                          int*              devInfo);
HIPSOLVER_EXPORT hipsolverStatus_t hipsolverDorgqrFortran(hipsolverHandle_t handle,
                                                          int               m,
                                                          int               n,
                                                          int               k,
                                                          double*           A,
                                                          int               lda,
                                                          double*           tau,
                                                          double*           work,
                                                          int               lwork,
                                                          int*              devInfo);
HIPSOLVER_EXPORT hipsolverStatus_t hipsolverCungqrFortran(hipsolverHandle_t handle,
                                                          int               m,
                                                          int               n,
                                                          int               k,
                                                          hipFloatComplex*  A,
                                                          int               lda,
                                                          hipFloatComplex*  tau,
                                                          hipFloatComplex*  work,
                                                          int               lwork,
                                                          int*              devInfo);